--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "8081": "adb reverse tcp:8081 tcp:8081",
+    "reload": "adb shell input text 'RR'",
+    "open": "adb shell input keyevent 82"
   },
   "dependencies": {
     "react": "16.6.3",
