--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "8081": "adb reverse tcp:8081 tcp:8081",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "8081": "adb reverse tcp:8081 tcp:8081",
     "reload": "adb shell input text 'RR'",
     "open": "adb shell input keyevent 82"
   },
@@ -14,6 +14,7 @@
     "react-native": "0.57.8",
     "react-native-fbsdk": "^0.8.0",
     "react-native-firebase": "^5.2.1",
+    "react-native-read-more-text": "^1.1.0",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9",
     "react-spring": "^7.2.10"
