--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fbsdk": "^0.8.0",
     "react-native-firebase": "^5.2.1",
     "react-native-read-more-text": "^1.1.0",
+    "react-native-scrollable-tab-view": "git+https://github.com/compojoom/react-native-scrollable-tab-view.git#fixes_android",
     "react-native-vector-icons": "^6.2.0",
     "react-navigation": "^3.0.9",
     "react-spring": "^7.2.10"
