--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,15 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:16.0.1"
     implementation "com.google.firebase:firebase-core:16.0.6"
       implementation "com.google.firebase:firebase-auth:16.1.0"
+      implementation (project(':react-native-camera')) {
+    exclude group: "com.google.android.gms"
+    implementation 'com.android.support:exifinterface:25.+'
+    implementation ('com.google.android.gms:play-services-vision:12.0.1') {
+        force = true
+    }
+}
+    implementation("com.android.support:exifinterface:27.1.1")
+
 
 }
 
