camera working for ios

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-camera')
     implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-firebase')
