--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ target 'instagramCloneApp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'instagramCloneAppTests' do
     inherit! :search_paths
     # Pods for testing
